# weather-mcp-server

./: .gitignore  Dockerfile  README.md  apprunner.yaml  main.py  pyproject.toml  requirements.txt
server/: weather.json  weather.py
