[project]
name = "mcp-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "fastembed>=0.6.1",
    "langchain-groq>=0.3.2",
    "mcp-use>=1.2.8",
    "mcp[cli]>=1.6.0",
    "nest-asyncio>=1.6.0",
    "uvicorn>=0.23.2",
]
